# ABot

./: .gitignore  README.md  bot_argparse.py  command.py  config_example.py  event.py  main.py  pyproject.toml  requirements.txt  utils.py
plugins/archpkg/: __init__.py  archpkg.py
plugins/bing/: __init__.py  fetch.py
plugins/eatwhat/: __init__.py  dish.py  dish_data.json
plugins/ecdict/: __init__.py  ecdict.csv  ecdict.sqlite  stardict.py
plugins/echo/: __init__.py
plugins/hefeng/: __init__.py  hefeng.py
plugins/help/: __init__.py
plugins/moviedb/: __init__.py  moviedb.py
plugins/nasa/: __init__.py  nasa.py
plugins/qqgroup/: __init__.py
plugins/translate/: __init__.py  translate.py
