[tool.poetry]
name = "Abot"
version = "0.1.0"
description = "A chat robot for tencent-qq based on go-cqhttp"
authors = ["fansuregrin <1134366185@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
requests = "^2.27.1"
pytz = "^2022.1"
lxml = "^4.9.0"
waitress = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
